tests/samples/invalid/illegal_jump_back.pn
fn main() -> i32
{
	start:
	var x = 33;

	goto start;

	x = 100;

	return: x
}
